--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>React Pure Component Starter</title>
+    <meta charset="UTF-8" />
+    <title>Hello React!</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.min.js"></script>>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
   </head>
   <body>
-    <div id='root'>
-    </div>
-    <script src="/static/index.js"></script>
+    <div id="app" />
+    <script type="text/babel">
+      ReactDOM.render(
+        <h1>Yet another markdown live preview thingy...</h1>,
+        document.getElementById('app')
+      );
+    </script>
   </body>
 </html>
