--- a/index.html
+++ b/index.html
@@ -8,14 +8,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+    <script type="text/babel" src="./app.js"></script>
   </head>
   <body>
     <div id="app" />
-    <script type="text/babel">
-      ReactDOM.render(
-        <h1>Yet another markdown live preview thingy...</h1>,
-        document.getElementById('app')
-      );
-    </script>
   </body>
 </html>
