--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
     <script type="text/babel" src="./app.js"></script>
+    <link rel="stylesheet" href="styles.css"></link>
   </head>
   <body>
     <div id="app" />
